[spellcheck] ToggleSpellPanel can't be invoked with args

Removes ToggleSpellPanel editor command handling in the "with args"
branch, since it cannot be invoked that way. It's still handled in the
no-args branch.

BUG=781971

Change-Id: I5a63bcd869d39ac98cbb36e93e121505653e71a1